--- a/src/assets/styles/setup/_mixins.scss
+++ b/src/assets/styles/setup/_mixins.scss
@@ -154,7 +154,8 @@
 @mixin status-btn($clr, $percentage) {
     background-color: lighten($clr, $percentage);
     color: darken($clr, 5%);
-    border: 1px solid $clr;
+    border: 1px solid lighten($clr, 15%);
+    border-radius: 4px;
 
     &:hover {
         background-color: $clr;
